--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "vitest"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:unit": "vitest run src/tests/unit/",
+    "test:integration": "vitest run src/tests/integration/",
+    "test:e2e": "vitest run src/tests/e2e/",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.6",
@@ -16,6 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@vitest/coverage-v8": "^4.0.14",
     "drizzle-kit": "^0.31.7",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3",
